# CADENCE

./: CHANGELOG.md  README.md  loaders.py  pyproject.toml  run_full_scale.py
analytic_pipeline/: __init__.py  changepoint.py  config.py  corroboration.py  features.py  generate_synthetic_data.py  isolation.py  loaders.py  periodicity.py  pipeline.py  prefilter.py  report.py  sax_screening.py  scoring.py  test_pipeline.py  visuals.py
results/: cadence_report.html  changepoints.csv  corroboration.csv  periodicity.csv  priority.csv  run_summary.json  sax_screening.csv
results/report/: cadence_report.html  changepoints.csv  corroboration.csv  periodicity.csv  priority.csv  sax_screening.csv
